--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -14,9 +14,9 @@
 
         <ImageView
             android:id="@+id/splash_logo"
-            android:src="@drawable/new_york_times_logo"
+            android:src="@drawable/logo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:contentDescription="@string/new_york_times_logo" />
     </FrameLayout>
 </layout>
